--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mongoose": "^6.2.1",
+    "grep": "^0.1.0",
+    "mongoose": "^6.6.2",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
