--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "github:motdotla/dotenv",
     "express": "^4.17.2",
     "grep": "^0.1.0",
     "mongoose": "^6.6.2",
