--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_USERNAME = 'spencerbelsky'
-DB_PASSWORD = 'password123456789'
+DB_USERNAME='spencerbelsky'
+DB_PASSWORD='password123456789'
+SECRET='something'
